# bookstore

./: README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yml  wokflow-pr.yml  workflow-pr.yaml
bookstore/: Dockerfile  README.md  pyproject.toml  settings.py  urls.py
bookstore/order/: factories.py
bookstore/order/migrations/: 0001_initial.py
bookstore/order/tests/test_serializers/: test_order_serializer.py
bookstore/order/tests/test_viewsets/: test_order_viewset.py
bookstore/order/viewsets/: order_viewset.py
bookstore/product/migrations/: 0001_initial.py
bookstore/product/models/: category.py
bookstore/product/serializers/: category_serializer.py
bookstore/product/viewsets/: product_viewset.py
order/: factories.py  urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/: test_serializers.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order-viewset.py  order_viewset.py
product/: factories.py  urls.py
product/migrations/: 0001_initial.py
product/models/: category.py  product.py
product/serializers/: __init__.py  category_serializer.py  product_serializer.py
product/tests/: test_serializers.py
product/tests/test_serializers/: test_category_serializer.py  test_product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
